@@ -24,9 +24,10 @@
 
 # schema version, change here if you have updated the db schema
 CREATE TABLE IF NOT EXISTS `schema` (
-version VARCHAR( 255 ) NOT NULL
+version VARCHAR( 255 ) NOT NULL,
+name VARCHAR( 255 ) NOT NULL
 );
-INSERT INTO `schema` VALUES ('2.3.2+svn1743');
+INSERT INTO `schema` VALUES ('2.4.0', 'Thriller');
 
 #DROP TABLE IF EXISTS jobs;
 CREATE TABLE IF NOT EXISTS jobs (
